fixed large cannon logo overlapping navbar

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,3 +1,7 @@
 a > img {
     width: 125px;
 }
+
+header {
+    z-index: 999;
+}
