--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -17,5 +17,7 @@
    box-shadow: rgb(64, 189, 249) 0px -4px 0px inset;
       }
 
-
+.nav{
+   z-index: 999;
+}
 
