--- a/src/pages/homepage/Home.scss
+++ b/src/pages/homepage/Home.scss
@@ -85,4 +85,12 @@ padding-right: 30px;
 img {
 	  width: 100%;
 	}	
+
+#logo1 {
+	-webkit-user-select: none;  /* Chrome all / Safari all */
+	-moz-user-select: none;     /* Firefox all */
+	-ms-user-select: none;      /* IE 10+ */
+	user-select: none; 
+	z-index: 0;        
+}
 		
